--- a/links.html
+++ b/links.html
@@ -83,7 +83,13 @@
 				<div class="container">
 					<h1 class="links-page-title"></h1>
 
-					<div class="links-page-messagers count-0">
+					<div class="links-page-messagers count-1">
+						<a href="https://www.instagram.com/k.nursagatov" target="_blank" style="
+"
+							class="links-page-messager">
+							<i class="fa fa-instagram" aria-hidden="true">
+								</i>Instagram
+						</a>
 					</div>
 
 					<div class="links-page-list">
@@ -169,6 +175,9 @@
 			<div class="links-page">
 				<div class="container">
 					<div class="links-page-soc">
+						<a href="https://www.instagram.com/k.nursagatov" target="_blank" style="
+"
+							class="links-page-soc__link" title="Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a>
 					</div>
 
 					<div class="links-page-footer">
