--- a/links.html
+++ b/links.html
@@ -83,12 +83,30 @@
 				<div class="container">
 					<h1 class="links-page-title"></h1>
 
-					<div class="links-page-messagers count-1">
+					<div class="links-page-messagers count-4">
+						<a href="mailto:garik26061986@gmail.com" target="_blank" style="
+"
+							class="links-page-messager">
+							<i class="fa fa-envelope-o" aria-hidden="true">
+								</i>Email
+						</a>
+						<a href="https://wa.me/+7 747 288 2847" target="_blank" style="
+"
+							class="links-page-messager">
+							<i class="fa fa-whatsapp" aria-hidden="true">
+								</i>WhatsApp
+						</a>
 						<a href="https://www.instagram.com/k.nursagatov" target="_blank" style="
 "
 							class="links-page-messager">
 							<i class="fa fa-instagram" aria-hidden="true">
 								</i>Instagram
+						</a>
+						<a href="tel:+7 747 288 2847" target="_blank" style="
+"
+							class="links-page-messager">
+							<i class="fa fa-phone" aria-hidden="true">
+								</i>Phone
 						</a>
 					</div>
 
@@ -106,15 +124,6 @@
 							</form>
 							<div id="leadSent" class="links-page-blc__txt"></div>
 						</div>
-
-
-
-						<div class="links-page-btn-pic">
-							<center><img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81476796_808786939548169_7354265906439607728_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=ddWExBJyYAwAX8t8pFX&oh=c78d082199e33e9cf122dceed5356abf&oe=5ED97925" alt="">
-							</img></center>
-						</div>
-
-
 					</div>
 				</div>
 			</div>	
@@ -126,16 +135,6 @@
 						<div class="container">
 							<h2 class="links-page-title">ПОПУЛЯРНЫЕ</h2>
 							<div class="article-more__list">
-								<a href="./B6VfhQuHFVw.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>18</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/80467078_636509520428268_1484966008712395743_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=O4xOqmOoZDwAX_8VBxA&oh=f64c81040dd1096860d6a346b682f143&oe=5EBCF048" alt="">
-									</div>
-									<div class="article-more__item-name" style="
-"></div>
-								</a>
 								<a href="./rvshi-2oy-vzvod.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
@@ -145,6 +144,16 @@
 									</div>
 									<div class="article-more__item-name" style="
 ">РВШИ 2ой взвод</div>
+								</a>
+								<a href="./B6VfhQuHFVw.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>18</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/80467078_636509520428268_1484966008712395743_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=O4xOqmOoZDwAX_8VBxA&oh=f64c81040dd1096860d6a346b682f143&oe=5EBCF048" alt="">
+									</div>
+									<div class="article-more__item-name" style="
+"></div>
 								</a>
 								<a href="./B6XQlnGnymN.html" class="article-more__item">
 									<div class="article-more__item-pic">
