--- a/stories.html
+++ b/stories.html
@@ -2,7 +2,7 @@
 <html lang="ru" prefix="og: http://ogp.me/ns#">
 <head>
     <meta charset="UTF-8">
-    <title>Stories. </title>
+    <title>Stories. Қайрат Нұрсағатов</title>
     
     <meta http-equiv="x-ua-compatible" content="ie=edge,chrome=1"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -35,7 +35,7 @@
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
-    <meta property="og:title" content="" />
+    <meta property="og:title" content="Қайрат Нұрсағатов" />
     <meta property="og:description" content="" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="k.nursagatov" />
@@ -58,10 +58,10 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<div class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/79270846_2506303486133873_9108935648319897600_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=PKe7ek9KLr8AX9MwvQ8&oh=f6c5a4eea040dd1b3610f2494cc8cc79&oe=5EBDCC96" alt="Қайрат Нұрсағатов" /></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/79270846_2506303486133873_9108935648319897600_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=Vm86X9KIc2QAX8Lrce1&oh=206e603030785ec81354581095e4bc53&oe=5EBDCC96" alt="Қайрат Нұрсағатов" /></div>
 							<div class="header__logo-txt">k.nursagatov</div>
 						</div>
-						<div class="header__title"></div>
+						<div class="header__title">Қайрат Нұрсағатов</div>
 					</div>
 				</div>
 			</div>
@@ -105,7 +105,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="B6z25WRnleb" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81476796_808786939548169_7354265906439607728_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=ddWExBJyYAwAX8t8pFX&oh=c78d082199e33e9cf122dceed5356abf&oe=5ED97925" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81476796_808786939548169_7354265906439607728_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=2hbtRDE5se4AX8MFt8z&oh=41788cc78cbfe2448f4ec07dceaa496c&oe=5ED97925" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -115,7 +115,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="B6v_6N6nWD5" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/79272644_998668020495069_3030074000769271502_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=oxzo9kmfyCUAX8e1MRR&oh=b6143cb92f0d5dd603cc39aed355128c&oe=5EC07881" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/79272644_998668020495069_3030074000769271502_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=v3RERnstfHIAX_Y-GtL&oh=18cba80d13f645bf8c0bb7ef47c37e79&oe=5EC07881" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -125,7 +125,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="rvshi-2oy-vzvod" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81623907_230784344576686_1179701892963666872_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=-ljgTYbG_t8AX8Pbw3s&oh=d568a17d0405c2e4a3134dd7d2dc9346&oe=5ECA249C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РВШИ 2ой взвод">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81623907_230784344576686_1179701892963666872_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=0s0epZHpp5EAX8jl30n&oh=37f0646ddb8cda1fd77c342c2f80640f&oe=5ECA249C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РВШИ 2ой взвод">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -135,7 +135,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="B6XQlnGnymN" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81231964_425169515037839_1520186995730937212_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=e1jD3_N18r8AX_LbT0I&oh=7f55c2645736b3612b2d8d9bd7308603&oe=5ED0BD57" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81231964_425169515037839_1520186995730937212_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=e1jD3_N18r8AX_yI6br&oh=25e0e619e7b2bbf865efa0970017c7c9&oe=5ED0BD57" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -145,7 +145,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="B6VfhQuHFVw" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/80467078_636509520428268_1484966008712395743_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=O4xOqmOoZDwAX_8VBxA&oh=f64c81040dd1096860d6a346b682f143&oe=5EBCF048" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/80467078_636509520428268_1484966008712395743_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=O4xOqmOoZDwAX-fWFEF&oh=1ad5c9f029536db2e2fcf2b6572762fc&oe=5EBCF048" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -155,7 +155,127 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="magazin-zhenskoy-odezhdy" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75310188_982777065438653_7553395339649264087_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=9AfjMsWjdvoAX9vpbGX&oh=1febe0440c19e2094e99eb51a65310f5&oe=5ED1144B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Магазин женской одежды">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75310188_982777065438653_7553395339649264087_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=jSsvJxoN0NkAX-pQa6L&oh=f78f4a82fbcecf505b6bd1b9560a5612&oe=5ED1144B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Магазин женской одежды">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
+							<input id="kukhni" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/71243680_2334386466872033_2031952423729882723_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=31hg5zFfSB8AX_EFheB&oh=190c2e3b98c1f8147a4f0d56ff444a24&oe=5EBFF3B5" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Кухни">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
+							<input id="garderobnye-komnaty-so-shkafami" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/74381408_165947047810485_3590122455548662399_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=R81x9CVk4joAX-COq-R&oh=9eb51a8ee453ad1445fdaa372222c71d&oe=5E302310" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Гардеробные комнаты со шкафами">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
+							<input id="shakhmatshylar" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/69343230_1375122765979971_7904559209205319811_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=dZLyxuG9dU4AX8gMofK&oh=b87145669582d4c9fae4cf1de7a4f6b1&oe=5EB9C879" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Шахматшылар">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
+							<input id="B2WrgpxFX-O" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/68974073_126303875399477_7030915911835423186_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=z9_Tc-Kzr1oAX9LSILQ&oh=628364766af43fdf4df07716b77abef7&oe=5EC4BE21" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
+							<input id="Bz0MMcSFq5r" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/65304046_507356223335164_6550506039712369174_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=uCLDUBFII_kAX-_XoGz&oh=78ec93217fc31326d50af5d9440532f5&oe=5EC4A5A0" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
+							<input id="Bz0MLyulQuj" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/65795699_469444273456655_269617935153902342_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=BlUpe7mhka8AX9ttSu2&oh=17921559c8feccff413f35a60a83c708&oe=5EB7B13F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
+							<input id="Bz0K9HXl4eW" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/65804118_464825114318596_4605417188570190807_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=Zn3quVpB8GMAX9mvl5y&oh=960d54fe450bd4a96e4285a21e3fa9dd&oe=5ECBC9D8" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
+							<input id="Bz0KebXFVXP" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/66674745_156489712186054_8619277253094696931_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=PTWw9I6Ma3UAX_LMsRT&oh=4f726f45b2b05ad8e50dd7ddc3f21697&oe=5ED7196C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
+							<input id="BzaqwMpl5IA" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/65670277_442289273290077_1676988089729350296_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=ZpHz-5iVxYcAX-I9kM-&oh=3cdcfb55078a05fa163edb5552efea39&oe=5EDB8F7D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
+							<input id="ByIWX0iFP-x" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/60918464_2339806362956296_2510710648770381561_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=KHuMaZ6seqUAX-cgrSz&oh=285e787555496dd3a104166908b8a05d&oe=5EB8741C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
+							<input id="ByIVazYFbK5" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/60991654_611442149360858_1673236753925595956_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=6tFrNtfg3GoAX-v8HCl&oh=05efd55c821d91041b9a9dd9a66ffa22&oe=5EC4CB94" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
+							<input id="ByAnvdQlEh3" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/60239152_2385342965030497_8799094838762037798_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=l-0w5n4sxPsAX-ZNglG&oh=058c3222e7371d23b6c97238d0a68606&oe=5ECD1F2F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
