--- a/error.html
+++ b/error.html
@@ -43,7 +43,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./main.html" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/79270846_2506303486133873_9108935648319897600_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=PKe7ek9KLr8AX9MwvQ8&oh=f6c5a4eea040dd1b3610f2494cc8cc79&oe=5EBDCC96" alt="Қайрат Нұрсағатов"></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/79270846_2506303486133873_9108935648319897600_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=Vm86X9KIc2QAX8Lrce1&oh=206e603030785ec81354581095e4bc53&oe=5EBDCC96" alt="Қайрат Нұрсағатов"></div>
 							<div class="header__logo-txt">k.nursagatov</div>
 						</a>
 						<div class="header__title">Қайрат Нұрсағатов</div>
@@ -91,12 +91,30 @@
 				<div class="container">
 					<h2 class="article-more__title">ПОПУЛЯРНЫЕ</h2>
 					<div class="article-more__list">
+							<a href="./posts/./shakhmatshylar.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>23</span>
+								</div>
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/69343230_1375122765979971_7904559209205319811_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=dZLyxuG9dU4AX8gMofK&oh=b87145669582d4c9fae4cf1de7a4f6b1&oe=5EB9C879" alt="Шахматшылар">
+							</div>
+							<div class="article-more__item-name">Шахматшылар</div>
+						</a>
+							<a href="./posts/./B2WrgpxFX-O.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>22</span>
+								</div>
+								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/68974073_126303875399477_7030915911835423186_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=z9_Tc-Kzr1oAX9LSILQ&oh=628364766af43fdf4df07716b77abef7&oe=5EC4BE21" alt="">
+							</div>
+							<div class="article-more__item-name"></div>
+						</a>
 							<a href="./posts/./rvshi-2oy-vzvod.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>18</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81623907_230784344576686_1179701892963666872_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=-ljgTYbG_t8AX8Pbw3s&oh=d568a17d0405c2e4a3134dd7d2dc9346&oe=5ECA249C" alt="РВШИ 2ой взвод">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81623907_230784344576686_1179701892963666872_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=0s0epZHpp5EAX8jl30n&oh=37f0646ddb8cda1fd77c342c2f80640f&oe=5ECA249C" alt="РВШИ 2ой взвод">
 							</div>
 							<div class="article-more__item-name">РВШИ 2ой взвод</div>
 						</a>
@@ -105,16 +123,34 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>18</span>
 								</div>
-								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/80467078_636509520428268_1484966008712395743_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=O4xOqmOoZDwAX_8VBxA&oh=f64c81040dd1096860d6a346b682f143&oe=5EBCF048" alt="">
+								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/80467078_636509520428268_1484966008712395743_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=O4xOqmOoZDwAX-fWFEF&oh=1ad5c9f029536db2e2fcf2b6572762fc&oe=5EBCF048" alt="">
 							</div>
 							<div class="article-more__item-name"></div>
+						</a>
+							<a href="./posts/./Bz0MLyulQuj.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>18</span>
+								</div>
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/65795699_469444273456655_269617935153902342_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=BlUpe7mhka8AX9ttSu2&oh=17921559c8feccff413f35a60a83c708&oe=5EB7B13F" alt="">
+							</div>
+							<div class="article-more__item-name"></div>
+						</a>
+							<a href="./posts/./kukhni.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>13</span>
+								</div>
+								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/71243680_2334386466872033_2031952423729882723_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=31hg5zFfSB8AX_EFheB&oh=190c2e3b98c1f8147a4f0d56ff444a24&oe=5EBFF3B5" alt="Кухни">
+							</div>
+							<div class="article-more__item-name">Кухни</div>
 						</a>
 							<a href="./posts/./B6XQlnGnymN.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81231964_425169515037839_1520186995730937212_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=e1jD3_N18r8AX_LbT0I&oh=7f55c2645736b3612b2d8d9bd7308603&oe=5ED0BD57" alt="">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81231964_425169515037839_1520186995730937212_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=e1jD3_N18r8AX_yI6br&oh=25e0e619e7b2bbf865efa0970017c7c9&oe=5ED0BD57" alt="">
 							</div>
 							<div class="article-more__item-name"></div>
 						</a>
@@ -123,27 +159,9 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
 								</div>
-								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75310188_982777065438653_7553395339649264087_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=9AfjMsWjdvoAX9vpbGX&oh=1febe0440c19e2094e99eb51a65310f5&oe=5ED1144B" alt="Магазин женской одежды">
+								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75310188_982777065438653_7553395339649264087_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=jSsvJxoN0NkAX-pQa6L&oh=f78f4a82fbcecf505b6bd1b9560a5612&oe=5ED1144B" alt="Магазин женской одежды">
 							</div>
 							<div class="article-more__item-name">Магазин женской одежды</div>
-						</a>
-							<a href="./posts/./B6z25WRnleb.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>8</span>
-								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81476796_808786939548169_7354265906439607728_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=ddWExBJyYAwAX8t8pFX&oh=c78d082199e33e9cf122dceed5356abf&oe=5ED97925" alt="">
-							</div>
-							<div class="article-more__item-name"></div>
-						</a>
-							<a href="./posts/./B6v_6N6nWD5.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>5</span>
-								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/79272644_998668020495069_3030074000769271502_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=oxzo9kmfyCUAX8e1MRR&oh=b6143cb92f0d5dd603cc39aed355128c&oe=5EC07881" alt="">
-							</div>
-							<div class="article-more__item-name"></div>
 						</a>
 						</div>
 				</div>
