--- a/links.html
+++ b/links.html
@@ -46,6 +46,8 @@
     <!--modernizr-->
 	<script src="js/vendors/modernizr-custom.js"></script>
 
+
+
 </head>
 <body>
     <!--[if lt IE 8]>
@@ -135,7 +137,7 @@
 						<div class="container">
 							<h2 class="links-page-title">ПОПУЛЯРНЫЕ</h2>
 							<div class="article-more__list">
-								<a href="./shakhmatshylar.html" class="article-more__item">
+								<a href="./posts/./shakhmatshylar.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>23</span>
@@ -145,7 +147,7 @@
 									<div class="article-more__item-name" style="
 ">Шахматшылар</div>
 								</a>
-								<a href="./B2WrgpxFX-O.html" class="article-more__item">
+								<a href="./posts/./B2WrgpxFX-O.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>22</span>
@@ -155,7 +157,7 @@
 									<div class="article-more__item-name" style="
 "></div>
 								</a>
-								<a href="./rvshi-2oy-vzvod.html" class="article-more__item">
+								<a href="./posts/./rvshi-2oy-vzvod.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>18</span>
@@ -165,17 +167,7 @@
 									<div class="article-more__item-name" style="
 ">РВШИ 2ой взвод</div>
 								</a>
-								<a href="./B6VfhQuHFVw.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>18</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/80467078_636509520428268_1484966008712395743_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=c1xnGJU0oscAX9HaxZ3&oh=d514858dd48b58026e07051ad029ebfa&oe=5EBCF048" alt="">
-									</div>
-									<div class="article-more__item-name" style="
-"></div>
-								</a>
-								<a href="./Bz0MLyulQuj.html" class="article-more__item">
+								<a href="./posts/./Bz0MLyulQuj.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>18</span>
@@ -185,7 +177,17 @@
 									<div class="article-more__item-name" style="
 "></div>
 								</a>
-								<a href="./kukhni.html" class="article-more__item">
+								<a href="./posts/./B6VfhQuHFVw.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>18</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/80467078_636509520428268_1484966008712395743_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=c1xnGJU0oscAX9HaxZ3&oh=d514858dd48b58026e07051ad029ebfa&oe=5EBCF048" alt="">
+									</div>
+									<div class="article-more__item-name" style="
+"></div>
+								</a>
+								<a href="./posts/./kukhni.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>13</span>
@@ -195,7 +197,7 @@
 									<div class="article-more__item-name" style="
 ">Кухни</div>
 								</a>
-								<a href="./B6XQlnGnymN.html" class="article-more__item">
+								<a href="./posts/./B6XQlnGnymN.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
@@ -205,7 +207,7 @@
 									<div class="article-more__item-name" style="
 "></div>
 								</a>
-								<a href="./magazin-zhenskoy-odezhdy.html" class="article-more__item">
+								<a href="./posts/./magazin-zhenskoy-odezhdy.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
